@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2013-06-20 Davide
+	* Add the counters to correct for events with the SUSY propagator bug
+
 2013-06-18 Steve
 	* Update for p1512: jet.sumPtTrk -> jet.sumPtTrk_pv0_500MeV
 
